feat: change apps prefix

--- a/apps/dashboard/src/index.html
+++ b/apps/dashboard/src/index.html
@@ -8,6 +8,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <ek-frontend-root></ek-frontend-root>
+    <dashboard-root></dashboard-root>
   </body>
 </html>
