--- a/apps/ghc/src/index.html
+++ b/apps/ghc/src/index.html
@@ -8,6 +8,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <ek-frontend-root></ek-frontend-root>
+    <ghc-root></ghc-root>
   </body>
 </html>
